--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -39,9 +39,9 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto " href="https://thevoiceofazamgarh.com/">Home</a></li>
-          <li><a class="nav-link scrollto" href="https://thevoiceofazamgarh.com/#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="contacts.html">Get Contacts</a></li>
+          <li><a class="nav-link scrollto " href="https://voiceofazamgarh.com/">Home</a></li>
+          <li><a class="nav-link scrollto" href="https://voiceofazamgarh.com/#contact">Contact Us</a></li>
+          <li><a class="getstarted scrollto" href="contacts.html">Directory</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -56,7 +56,7 @@
       <div class="container">
 
         <ol>
-          <li><a href="https://thevoiceofazamgarh.com/">Home</a></li>
+          <li><a href="https://voiceofazamgarh.com/">Home</a></li>
           <li>Privacy and Policy</li>
         </ol>
 
