--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Sponsors</a></li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="contacts.html">Get Contacts</a></li>
+          <li><a class="nav-link scrollto" href="#contact">Contact Us</a></li>
+          <li><a class="getstarted scrollto" href="contacts.html">Directory</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -102,7 +102,7 @@
     <div class="container d-flex flex-column align-items-center justify-content-center" data-aos="fade-up">
       <h1>The Voice of Azamgarh</h1>
       <h2>is a platform that resonates with the vibrant spirit of Azamgarh, Uttar Pradesh</h2>
-      <a href="search.html" class="btn-get-started scrollto">Search Details</a>
+      <a href="search.html" class="btn-get-started scrollto">Search Directory</a>
       <img src="assets/img/hero-img.png" class="img-fluid hero-img" alt="" data-aos="zoom-in" data-aos-delay="150">
     </div>
 
