--- a/search.html
+++ b/search.html
@@ -201,49 +201,121 @@ thead {
           <select id="category" name="category">
             <option value="">Select Category</option>
             <option value="Advertising Services">Advertising Services</option>
-            <option value="Advocate">Advocate</option>
-            <option value="Agent">Agent</option>
-            <option value="Ambulance Service">Ambulance Service</option>
-            <option value="Architect">Architect</option>
-            <option value="Arts and Craft">Arts and Craft</option>
-            <option value="Audio-Video">Audio-Video</option>
-            <option value="Auto On rent">Auto On rent</option>
-            <option value="Automobiles">Automobiles</option>
-            <option value="Cable Network">Cable Network</option>
-            <option value="Carpenter">Carpenter</option>
-            <option value="Caters">Caters</option>
-            <option value="Coaching Institutes">Coaching Institutes</option>
-            <option value="Coal Depo">Coal Depo</option>
-            <option value="Color Lab">Color Lab</option>
-            <option value="Computer Goods">Computer Goods</option>
-            <option value="Computer Typing">Computer Typing</option>
-            <option value="Confectionery">Confectionery</option>
-            <option value="Contractor">Contractor</option>
-            <option value="Courier Service">Courier Service</option>
-            <option value="Crane Recovery Service">Crane Recovery Service</option>
-            <option value="Electrical and Electronics Repairing">Electrical and Electronics Repairing</option>
-            <option value="Electricals">Electricals</option>
-            <option value="Electronics">Electronics</option>
-            <option value="Embroidery">Embroidery</option>
-            <option value="Fire Fighting">Fire Fighting</option>
-            <option value="Gas Agency">Gas Agency</option>
-            <option value="Geet and Sangeet">Geet and Sangeet</option>
-            <option value="Geet Sangeet Training">Geet Sangeet Training</option>
-            <option value="General Store">General Store</option>
-            <option value="Gift Items">Gift Items</option>
-            <option value="Hardware Tools">Hardware Tools</option>
-            <option value="Hospital">Hospital</option>
-            <option value="Import Export">Import Export</option>
-            <option value="Industry">Industry</option>
-            <option value="Insurance">Insurance</option>
-            <option value="Inverter and Battery">Inverter and Battery</option>
-            <option value="Jewellery">Jewellery</option>
-            <option value="Kathawachak Bramhan">Kathawachak Bramhan</option>
-            <option value="Kitchen Ware">Kitchen Ware</option>
-            <option value="Krashi Beej Vikreta">Krashi Beej Vikreta</option>
-            <option value="Orchestra and Jagran">Orchestra and Jagran</option>
-            <option value="Training Centers">Training Centers</option>
-            <option value="Wedding Cards">Wedding Cards</option>
+												<option value="Advocate">Advocate</option>
+												<option value="Agent">Agent</option>
+												<option value="Ambulance Service">Ambulance Service</option>
+												<option value="Architect">Architect</option>
+												<option value="Arts and Craft">Arts and Craft</option>
+												<option value="Audio-Video">Audio-Video</option>
+												<option value="Auto On rent">Auto On rent</option>
+												<option value="Automobiles">Automobiles</option>
+												<option value="Ayurveda">Ayurveda</option>
+												<option value="Bhangra Party">Bhangra Party</option>
+												<option value="Bhojnalaya">Bhojnalaya</option>
+												<option value="Bradhashram">Bradhashram</option>
+												<option value="Cable Network">Cable Network</option>
+												<option value="Carpenter">Carpenter</option>
+												<option value="Caters">Caters</option>
+												<option value="CCTV Camera">CCTV Camera</option>
+												<option value="Cinema Hall">Cinema Hall</option>
+												<option value="Coaching Institutes">Coaching Institutes</option>
+												<option value="Coal Depo">Coal Depo</option>
+												<option value="Color Lab">Color Lab</option>
+												<option value="Computer Goods">Computer Goods</option>
+												<option value="Computer Typing">Computer Typing</option>
+												<option value="Confectionery">Confectionery</option>
+												<option value="Contractor">Contractor</option>
+												<option value="Courier Service">Courier Service</option>
+												<option value="Crane Recovery Service">Crane Recovery Service</option>
+												<option value="Cyber Cafe">Cyber Cafe</option>
+												<option value="Cycle Stores">Cycle Stores</option>
+												<option value="Dealers">Dealers</option>
+												<option value="Driving Training">Driving Training</option>
+												<option value="Educational Institution">Educational Institution</option>
+												<option value="Electrical and Electronics Repairing">Electrical and Electronics Repairing</option>
+												<option value="Electricals">Electricals</option>
+												<option value="Electricity">Electricity</option>
+												<option value="Electronics">Electronics</option>
+												<option value="Embroidery">Embroidery</option>
+												<option value="Fire Fighting">Fire Fighting</option>
+												<option value="Fish Seller">Fish Seller</option>
+												<option value="Gas Agency">Gas Agency</option>
+												<option value="Geet and Sangeet">Geet and Sangeet</option>
+												<option value="Geet Sangeet Training">Geet Sangeet Training</option>
+												<option value="General Store">General Store</option>
+												<option value="Gift Items">Gift Items</option>
+												<option value="Hardware Tools">Hardware Tools</option>
+												<option value="High School">High School</option>
+												<option value="Hospital">Hospital</option>
+												<option value="Import Export">Import Export</option>
+												<option value="Industry">Industry</option>
+												<option value="Insurance">Insurance</option>
+												<option value="Inter School">Inter School</option>
+												<option value="Inverter and Battery">Inverter and Battery</option>
+												<option value="Iron and Aluminium">Iron and Aluminium</option>
+												<option value="Jewellery">Jewellery</option>
+												<option value="Junior High School">Junior High School</option>
+												<option value="Kathawachak Bramhan">Kathawachak Bramhan</option>
+												<option value="Kitchen Ware">Kitchen Ware</option>
+												<option value="Krashi Beej Vikreta">Krashi Beej Vikreta</option>
+												<option value="Labor">Labor</option>
+												<option value="Luggage and Bags">Luggage and Bags</option>
+												<option value="Machinerys">Machinerys</option>
+												<option value="Madrasa">Madrasa</option>
+												<option value="Marble-Tiles Mistree">Marble-Tiles Mistree</option>
+												<option value="Marriage Hall">Marriage Hall</option>
+												<option value="Medical Institute">Medical Institute</option>
+												<option value="Medical Stores">Medical Stores </option>
+												<option value="Miniral Water Supplier">Miniral Water Supplier</option>
+												<option value="Misthan Bhandar">Misthan Bhandar</option>
+												<option value="Mobile Accessories">Mobile Accessories</option>
+												<option value="Mobile Cell">Mobile Cell</option>
+												<option value="Mobile Recharge">Mobile Recharge</option>
+												<option value="Mobile Repairing">Mobile Repairing</option>
+												<option value="Mobile Repairing Training">Mobile Repairing Training</option>
+												<option value="Money Exchange">Money Exchange</option>
+												<option value="Orchestra and Jagran">Orchestra and Jagran</option>
+												<option value="Primary-Nursery School">Primary-Nursery School</option>
+												<option value="Raajgeer">Raajgeer</option>
+												<option value="Radio FM">Radio FM</option>
+												<option value="Railway E Ticketing">Railway E Ticketing</option>
+												<option value="Railways">Railways</option>
+												<option value="Rang Karmii">Rang Karmii</option>
+												<option value="Readymade Garments">Readymade Garments</option>
+												<option value="Real Estate">Real Estate</option>
+												<option value="Refrigeration Repairing">Refrigeration Repairing</option>
+												<option value="Resin Foam">Resin Foam</option>
+												<option value="Restaurants">Restaurants</option>
+												<option value="Roadways">Roadways</option>
+												<option value="Sanitary">Sanitary</option>
+												<option value="Sanskrit Mahavidyalay">Sanskrit Mahavidyalay</option>
+												<option value="Scientific Instruments">Scientific Instruments</option>
+												<option value="Security Services">Security Services</option>
+												<option value="Sewing Embroidery Training">Sewing Embroidery Training</option>
+												<option value="Share Brokers">Share Brokers</option>
+												<option value="Share Market Tranning">Share Market Tranning</option>
+												<option value="Silayi Machine Sale">Silayi Machine Sale</option>
+												<option value="Software Developers">Software Developers</option>
+												<option value="Sonography">Sonography</option>
+												<option value="Sound Service">Sound Service</option>
+												<option value="Spoken English">Spoken English</option>
+												<option value="Sports Kits">Sports Kits</option>
+												<option value="Stationery">Stationery</option>
+												<option value="Studio">Studio</option>
+												<option value="Suppliers">Suppliers</option>
+												<option value="Surgical Equipments">Surgical Equipments</option>
+												<option value="Teaching Training">Teaching Training</option>
+												<option value="Technical Institute">Technical Institute</option>
+												<option value="Training Centers">Training Centers</option>
+												<option value="Vaastu Shaastra">Vaastu Shaastra</option>
+												<option value="Vastralay">Vastralay</option>
+												<option value="Video Mixing">Video Mixing</option>
+												<option value="Video Recordings">Video Recordings</option>
+												<option value="Water Purifier">Water Purifier</option>
+												<option value="Web Developers">Web Developers</option>
+												<option value="Wedding Cards">Wedding Cards</option>
+												<option value="Yoga Pranayam">Yoga Pranayam</option>
+												<option value="Yoga Trainnig">Yoga Trainnig</option>
           </select>
           <input type="text" id="address" name="address" placeholder="Address">
           <button type="button" onclick="searchDetails()">Search</button>
